Propagate application classpath to DiSL